--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ ipython = {extras = ["notebook"]}
 requests = "*"
 sklearn = "*"
 nltk = "*"
+rake-nltk = "*"
+kaggle = "*"
 
 [requires]
 python_version = "3.6"
